--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,6 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.12.12
 
 # Mod Properties
-	mod_version = 1.1.1
+	mod_version = 1.1.2-1.17.1
 	maven_group = net.set.spawn.mod
 	archives_base_name = set-spawn-mod
