--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,10 @@
+
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.65
-	loader_version=0.12.12
-
-# Mod Properties
-	mod_version = 1.1.2-1.17.1
-	maven_group = net.set.spawn.mod
-	archives_base_name = set-spawn-mod
+# check these on https://fabricmc.net/develop
+mod_id=setspawnmod
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.65
+loader_version=0.12.12
