--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
+# More versions available at: https://grayray75.github.io/LegacyFabric-Versions/
 # Fabric Properties
-# check these on https://fabricmc.net/develop
-mod_id=setspawnmod
-minecraft_version=1.15.2
-yarn_mappings=1.15.2+build.17
-loader_version=0.12.2
+minecraft_version=1.8
+yarn_mappings=1.8+build.458
+loader_version=0.14.13
+
+# Mod Properties
+mod_version = 0.0.1
+maven_group = xyz.tildejustin
+archives_base_name = cooldowndisplay
