--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ loader_version=0.14.13
 # Mod Properties
 mod_version = 0.0.1
 maven_group = xyz.tildejustin
-archives_base_name = cooldowndisplay
+archives_base_name = setspawn
