--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # More versions available at: https://grayray75.github.io/LegacyFabric-Versions/
 # Fabric Properties
+
+mod_id=setspawn
+version=v0.0.1
 minecraft_version=1.8
 yarn_mappings=1.8+build.458
 loader_version=0.14.13
 
-# Mod Properties
-mod_version = 0.0.1
-maven_group = xyz.tildejustin
-archives_base_name = setspawn
+## Mod Properties
+#mod_version = 0.0.1
+#maven_group = xyz.tildejustin
+#archives_base_name = setspawn
