--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,10 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 mod_id=setspawn
 version=0.0.2
-minecraft_version=1.8
-yarn_mappings=1.8+build.458
-loader_version=0.14.13
+minecraft_version=1.8.9
+yarn_mappings=1.8.9+build.458
+loader_version=0.12.12
+supported_versions=1.8.x
 ## Mod Properties
 #mod_version = 0.0.1
 #maven_group = xyz.tildejustin
