--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # More versions available at: https://grayray75.github.io/LegacyFabric-Versions/
 # Fabric Properties
-mod_id=setspawn
-version=0.0.2
+mod_id=setspawnmod
+version=0.0.3
 minecraft_version=1.8.9
 yarn_mappings=1.8.9+build.458
 loader_version=0.12.12
