--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,35 @@
 plugins {
     id 'fabric-loom' version '1.0-SNAPSHOT'
     id 'legacy-looming' version "1.0-SNAPSHOT" // Version must be the same as fabric-loom's
+    id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
+def getVersionMetadata() {
+    // CI builds version numbers
+    def build_id = System.getenv("RELEASE_NUMBER")
+    if (build_id != null) {
+        return build_id + ".0.0"
+    }
+
+    // Development builds
+    if (grgit == null) {
+        return "dev"
+    }
+
+    // Named development builds
+    def id = grgit.head().abbreviatedId
+    if (!grgit.status().clean) {
+        id += "-dirty"
+    }
+
+    return "rev.${id}"
+}
 
 archivesBaseName = "${project.mod_id}-${project.minecraft_version}"
-version = "${version}"
+version = "${getVersionMetadata()}"
 
 loom {
     setIntermediaryUrl('https://repo.legacyfabric.net/repository/legacyfabric/net/legacyfabric/intermediary/%1$s/intermediary-%1$s-v2.jar');
