--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,11 @@ def getVersionMetadata() {
     return "rev.${id}"
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 
-archivesBaseName = "${project.mod_id}-${project.supported_versions}"
+archivesBaseName = "${project.mod_id}-${project.minecraft_version}"
 version = "${getVersionMetadata()}"
 
 loom {
@@ -52,7 +52,8 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    it.options.release = 17
+    it.options.encoding = "UTF-8"
+    if (JavaVersion.current().isJava9Compatible()) it.options.release = 8
 }
 
 java {
