--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 env:
-  RELEASE_TITLE: "Set Spawn 1.12.2 build ${{github.run_number}}"
+  RELEASE_TITLE: "Set Spawn 1.9-1.12.2 build ${{github.run_number}}"
   RELEASE_NUMBER: "${{github.run_number}}"
   RELEASE_FILE: "build/libs/*${{github.run_number}}.0.0.jar"
 
