--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'fabric-loom' version '1.0-SNAPSHOT'
-    id 'legacy-looming' version "1.0-SNAPSHOT" // Version must be the same as fabric-loom's
+    id 'fabric-loom' version '1.2-SNAPSHOT'
+    id 'legacy-looming' version "1.2-SNAPSHOT" // Version must be the same as fabric-loom's
     id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
@@ -39,6 +39,7 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.legacyfabric:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    include(implementation('com.google.code.gson:gson:2.10.1'))
 }
 
 processResources {
@@ -51,7 +52,7 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    it.options.release = 17
+    it.options.release = 8
 }
 
 java {
