--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,6 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 mod_id=setspawn
 minecraft_version=1.3.2
+minecraft_version_range=1.3.2-1.5.2
 yarn_mappings=1.3.2+build.481
 loader_version=0.14.21
