--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-	id 'fabric-loom' version '1.0-SNAPSHOT'
+	id 'fabric-loom' version '1.3-SNAPSHOT'
+	id 'io.github.juuxel.loom-quiltflower' version '1.10.0'
 	id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
@@ -27,7 +28,7 @@ def getVersionMetadata() {
 	return "rev.${id}"
 }
 
-archivesBaseName = "${project.mod_id}-${project.minecraft_version}"
+archivesBaseName = "${project.mod_id}-${project.target_version}"
 version = "${getVersionMetadata()}"
 
 dependencies {
