--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 mod_id=setspawnmod
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.65
-loader_version=0.12.12
+target_version=1.18-1.20
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.9
+loader_version=0.14.21
