--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-    id 'fabric-loom' version '1.0-SNAPSHOT'
-    id 'legacy-looming' version "1.0-SNAPSHOT" // Version must be the same as fabric-loom's
+    id 'fabric-loom' version '1.3-SNAPSHOT'
+    id 'legacy-looming' version "1.2-SNAPSHOT" // Version must be the same as fabric-loom's
+    id 'io.github.juuxel.loom-quiltflower' version '1.10.0'
     id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
@@ -29,7 +30,7 @@ sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 
-archivesBaseName = "${project.mod_id}-1.9-1.12.2"
+archivesBaseName = "${project.mod_id}-${project.target_version}"
 version = "${getVersionMetadata()}"
 
 loom {
