--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 # More versions available at: https://grayray75.github.io/LegacyFabric-Versions/
 # Fabric Properties
 mod_id=setspawnmod
-minecraft_version=1.12.2
-yarn_mappings=1.12.2+build.458
-loader_version=0.14.17
+minecraft_version=1.13.2
+target_version=1.13.x
+yarn_mappings=1.13.2+build.481
+loader_version=0.14.21
