--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 mod_id=setspawnmod
-minecraft_version=1.15.2
-yarn_mappings=1.15.2+build.17
-loader_version=0.12.2
+minecraft_version=1.14.4
+target_version=1.14-1.15
+yarn_mappings=1.14.4+build.18
+loader_version=0.14.21
