--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 mod_id=setspawnmod
-target_version=1.18-1.20
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.9
+minecraft_version=1.18.2
+target_version=1.18.x
+yarn_mappings=1.18.2+build.4
 loader_version=0.14.21
