--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.2-SNAPSHOT'
+    id 'fabric-loom' version '1.3-SNAPSHOT'
     id 'legacy-looming' version "1.2-SNAPSHOT" // Version must be the same as fabric-loom's
     id 'org.ajoberstar.grgit' version '4.1.0'
 }
@@ -28,7 +28,7 @@ def getVersionMetadata() {
     return "rev.${id}"
 }
 
-archivesBaseName = "${project.mod_id}-${project.minecraft_version_range}"
+archivesBaseName = "${project.mod_id}-${project.target_version}"
 version = "${getVersionMetadata()}"
 
 loom {
@@ -39,7 +39,6 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.legacyfabric:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-    include(implementation('com.google.code.gson:gson:2.10.1'))
 }
 
 processResources {
@@ -47,7 +46,7 @@ processResources {
     inputs.property "version", project.version
 
     filesMatching("fabric.mod.json") {
-        expand "mod_id": project.mod_id, "version": project.version, "minecraft_version_range": project.minecraft_version_range, "minecraft_version": project.minecraft_version
+        expand "mod_id": project.mod_id, "version": project.version, "target_version": project.target_version, "minecraft_version": project.minecraft_version
     }
 }
 
