--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,6 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop
 mod_id=setspawnmod
 target_version=1.19-1.20
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.9
-loader_version=0.14.21
+minecraft_version=23w31a
+yarn_mappings=23w31a+build.4
+loader_version=0.14.22
