--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-# More versions available at: https://grayray75.github.io/LegacyFabric-Versions/
-# Fabric Properties
-mod_id=setspawn
+org.gradle.parallel=true
+org.gradle.caching=true
+mod_id=setspawnmod
+mod_version=1.0.0
 minecraft_version=1.3.2
-target_version=1.3-1.5
-yarn_mappings=1.3.2+build.481
-loader_version=0.14.21
+target_version=1.3-1.5.2
+yarn_build=533
+loader_version=0.15.3
