--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,8 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 mod_id=setspawnmod
+mod_version=3.0.0
 minecraft_version=1.14.4
-target_version=1.14-1.15
+target_version=1.14-1.15.2
 yarn_mappings=1.14.4+build.18
-loader_version=0.14.21
+loader_version=0.15.3
