--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.5-SNAPSHOT'
+	id "fabric-loom" version "1.5-SNAPSHOT"
 }
 
 version = "$mod_version+$target_version"
@@ -25,8 +25,13 @@ tasks.withType(JavaCompile).configureEach {
 	if (JavaVersion.current().isJava9Compatible()) it.options.release.set(8)
 }
 
+tasks.withType(JavaCompile).configureEach {
+	it.options.encoding = "UTF-8"
+	if (JavaVersion.current().isJava9Compatible()) it.options.release.set(8)
+}
+
 java {
-	withSourcesJar()
+	sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 jar {
