--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 mod_id=setspawnmod
+mod_version=1.0.0
 minecraft_version=1.18.2
 target_version=1.18.x
 yarn_mappings=1.18.2+build.4
