--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,13 @@
 plugins {
 	id 'fabric-loom' version '1.3-SNAPSHOT'
 	id 'io.github.juuxel.loom-vineflower' version '1.11.0'
-	id 'org.ajoberstar.grgit' version '4.1.0'
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
-def getVersionMetadata() {
-	// CI builds version numbers
-	def build_id = System.getenv("RELEASE_TAG")
-	if (build_id != null) {
-		return build_id
-	}
-
-	// Development builds
-	if (grgit == null) {
-		return "dev"
-	}
-
-	// Named development builds
-	def id = grgit.head().abbreviatedId
-	if (!grgit.status().clean) {
-		id += "-dirty"
-	}
-
-	return "rev.${id}"
-}
-
-archivesBaseName = "${project.mod_id}-${project.target_version}"
-version = "${getVersionMetadata()}"
+archivesBaseName = mod_id
+version = "$mod_version+$target_version"
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
