--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,13 @@
 plugins {
     id 'fabric-loom' version '1.3-SNAPSHOT'
-    id 'legacy-looming' version "1.2-SNAPSHOT" // Version must be the same as fabric-loom's
-    id 'io.github.juuxel.loom-quiltflower' version '1.10.0'
-    id 'org.ajoberstar.grgit' version '4.1.0'
-}
-
-def getVersionMetadata() {
-    // CI builds version numbers
-    def build_id = System.getenv("RELEASE_NUMBER")
-    if (build_id != null) {
-        return build_id + ".0.0"
-    }
-
-    // Development builds
-    if (grgit == null) {
-        return "dev"
-    }
-
-    // Named development builds
-    def id = grgit.head().abbreviatedId
-    if (!grgit.status().clean) {
-        id += "-dirty"
-    }
-
-    return "rev.${id}"
+    id 'legacy-looming' version "1.3-SNAPSHOT" // Version must be the same as fabric-loom's
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-
-archivesBaseName = "${project.mod_id}-${project.target_version}"
-version = "${getVersionMetadata()}"
-
-loom {
-    setIntermediaryUrl('https://repo.legacyfabric.net/repository/legacyfabric/net/legacyfabric/intermediary/%1$s/intermediary-%1$s-v2.jar')
-}
+archivesBaseName = mod_id
+version = "$mod_version+$target_version"
 
 dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
