--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 # More versions available at: https://grayray75.github.io/LegacyFabric-Versions/
 # Fabric Properties
 mod_id=setspawnmod
+mod_version=1.0.0
 minecraft_version=1.13.2
 target_version=1.13.x
-yarn_mappings=1.13.2+build.481
+yarn_mappings=1.13.2+build.533
 loader_version=0.14.21
