--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # More versions available at: https://grayray75.github.io/LegacyFabric-Versions/
 # Fabric Properties
-mod_id=setspawnmod
-minecraft_version=1.12.2
-yarn_mappings=1.12.2+build.458
-loader_version=0.14.17
+mod_id=set-spawn
+minecraft_version=1.12
+mod_version=1.0.0
+yarn_mappings=1.12+build.536
+loader_version=0.15.7
