initial multiversion support and config subsystem reworking

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs = -Xmx2G
 org.gradle.parallel = true
 org.gradle.caching = true
 
-mod_version = 3.0.1
-target_version = 1.16.1
-archives_name = set-spawn
+mod_version = 4.0.0
+archives_name = setspawnmod
+base_archives_name = setspawnmod-common
 maven_group = me.bdamja
