--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,21 @@
 pluginManagement {
     repositories {
         maven { url "https://maven.fabricmc.net" }
+        maven { url "https://repo.legacyfabric.net/repository/legacyfabric" }
+        maven { url "https://jitpack.io" }
         mavenCentral()
         gradlePluginPortal()
         mavenLocal()
     }
 }
+
+rootProject.name = "set-spawn-common"
+
+include "1.3-1.5.2"
+include "1.6.x"
+include "1.7.x"
+include "1.12"
+include "1.8-1.12.2"
+include "1.13.x"
+include "1.14-1.18.2"
+include "1.19-1.21"
